# AntiInterview

./: .gitignore  COMMIT_MESSAGE.md  COMMIT_MESSAGE_HOOK_ANTIINTERVIEW.md  ISSUE_001_BANNER_RESOLUTION.md  README.md  RELEASE_NOTES_PT.md  build_release_package.bat  config.example.toml  installer.iss  test_process_hiding.rs
.amazonq/rules/: CLAUDE.md  readme.md
.github/workflows/: ci.yml
hook/: CMakeLists.txt  hook.cpp  hook.vcxproj  hook_antiinterview.cpp  hook_chrome.cpp  hook_edge.cpp  hook_firefox.cpp  hook_notepad.cpp  hook_visualstudio.cpp  hook_vscode.cpp  pch.h
injector/: Cargo.toml  build.rs
injector/src/: main.rs
injector/src/application/: configuration_repository.rs  mod.rs  window_repository.rs  window_service.rs
injector/src/domain/: configuration.rs  mod.rs  window.rs
injector/src/infrastructure/: file_configuration_repository.rs  mod.rs  nt_hook.rs  nt_hook_tests.rs  process_monitor.rs  screen_capture.rs  tray_manager.rs  windows_window_repository.rs
injector/src/presentation/: app_state.rs  app_state_tests.rs  gui.rs  mod.rs
injector/src/presentation/video/: frame_loader.rs  mod.rs  video_renderer.rs  video_stream.rs
payload/: Cargo.toml
payload/src/: lib.rs  nt_hook.rs  tests.rs
payload/tests/: integration_tests.rs
release/: README.md  RELEASE_NOTES.md  USER_GUIDE.md
release/assets/icons/menu/: README.md
