[package]
name = "anti-interview"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.49", features = ["derive"] }
crossbeam-channel = "0.5.15"
dll-syringe = { version = "0.17.0", features = ["into-x86-from-x64", "rpc-raw"] }
eframe = { version = "0.33.0", default-features = false, features = ["glow", "default_fonts", "persistence"] }
egui_extras = { version = "0.33.0", features = ["image"] }
egui-video = { version = "0.9.0", default-features = false, optional = true }
image = { version = "0.25.8", default-features = false, features = ["ico", "gif"]}
tray-icon = "0.18"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging" , "Win32_Graphics_Dwm", "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi"] }
windows-capture = { version = "2.0.0-alpha.7" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"

[build-dependencies]
winresource = "0.1.23"

[features]
default = []
video = ["egui-video"]

[[bin]]
name = "anti-interview"
path = "src/main.rs"